--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello World,Julia is a software engineer</p>
-    <h2>Hello World</h2>
+    <section id="welcome-section">
+        <h1>Hello World</h1>  
+        <p>Hello World,Julia is a software engineer</p>
+    </section>  
+    <section id="projects"> 
+        <div class="project-tile">
+
+        </div>
+
+    </section>
 </body>
 </html>
